<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    app:title="@string/pref_category_home">

    <EditTextPreference
      android:key="server_url"
      android:title="@string/pref_server_url_title"
      android:summary="@string/pref_server_url_summary"
      android:dialogTitle="@string/pref_server_url_title" />

    <Preference
      android:key="manage_bookmarks"
      android:title="@string/pref_saved_urls_title"
      android:summary="@string/bookmark_empty_list" />
  </PreferenceCategory>

  <PreferenceCategory
    app:title="@string/pref_category_browser">

    <ListPreference
      android:key="user_agent_mode"
      android:title="@string/pref_user_agent_title"
      android:summary="@string/pref_user_agent_summary"
      android:entries="@array/user_agent_entries"
      android:entryValues="@array/user_agent_values"
      android:defaultValue="mobile" />

    <SwitchPreferenceCompat
      android:key="allow_http"
      android:title="@string/pref_allow_http_title"
      android:summary="@string/pref_allow_http_summary"
      android:defaultValue="true" />

    <SwitchPreferenceCompat
      android:key="allow_invalid_ssl"
      android:title="@string/pref_allow_invalid_ssl_title"
      android:summary="@string/pref_allow_invalid_ssl_summary"
      android:defaultValue="false" />
  </PreferenceCategory>

  <PreferenceCategory
    app:title="@string/pref_category_support">

    <Preference
      android:key="check_update"
      android:title="@string/update_title"
      android:summary="@string/update_summary_checking"
      android:enabled="false" />

    <tv.firetvwebwrapper.app.DonatePreference
      android:key="donate"
      android:title="☕ Buy Me a Coffee"
      android:summary="@string/pref_donate_summary" />
  </PreferenceCategory>

</PreferenceScreen>
