<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="24dp">

  <TextView
    android:id="@+id/bookmark_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:text="@string/bookmark_add_message"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

  <ListView
    android:id="@+id/bookmark_list"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:divider="@android:color/darker_gray"
    android:dividerHeight="1dp"
    android:focusable="true"
    android:focusableInTouchMode="true" />

  <TextView
    android:id="@+id/bookmark_empty_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="32dp"
    android:text="@string/bookmark_empty_list"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:visibility="gone" />

  <Button
    android:id="@+id/add_bookmark_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:text="@string/bookmark_add" />

</LinearLayout>
